--- a/admin/login/index.html
+++ b/admin/login/index.html
@@ -130,7 +130,7 @@
                 if (error) throw error;
 
                 // Success - redirect to dashboard
-                window.location.href = '../index.html';
+                window.location.href = '../';
             } catch (error) {
                 errorDiv.textContent = '❌ ' + error.message;
                 errorDiv.style.display = 'block';
@@ -141,7 +141,7 @@
         (async () => {
             const { data: { user } } = await supabaseClient.auth.getUser();
             if (user) {
-                window.location.href = '../index.html';
+                window.location.href = '../';
             }
         })();
     </script>
