Implement multi-user permissions and user management UI

--- a/basic-menu/admin/index.html
+++ b/basic-menu/admin/index.html
@@ -106,6 +106,19 @@
                 </div>
             </section>
 
+            <!-- User Management (Only for Owners) -->
+            <section class="admin-section" id="adminManagementSection" style="display: none;">
+                <div class="section-header">
+                    <h2>👥 إدارة الصلاحيات</h2>
+                    <button class="btn btn-primary" id="addAdminBtn">➕ إضافة مسؤول</button>
+                </div>
+                <div class="card">
+                    <div id="adminsList" class="table-responsive">
+                        <!-- Admins list will be loaded here -->
+                    </div>
+                </div>
+            </section>
+
             <!-- QR Code & Share -->
             <section class="admin-section">
                 <h2>📱 مشاركة المنيو</h2>
