Final migration to Vercel: refactored paths and added vercel config

--- a/basic-menu/menu/index.html
+++ b/basic-menu/menu/index.html
@@ -23,8 +23,8 @@
     </style>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/premium-menu/assets/css/styles.css">
-    <link rel="stylesheet" href="/premium-menu/assets/css/menu.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/menu.css">
 </head>
 
 <body class="antialiased">
@@ -114,16 +114,16 @@
 
     <!-- Core Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/premium-menu/config/supabase.js"></script>
+    <script src="/config/supabase.js"></script>
 
     <!-- Services -->
-    <script src="/premium-menu/assets/js/services/api.service.js"></script>
-    <script src="/premium-menu/assets/js/services/restaurant.service.js"></script>
-    <script src="/premium-menu/assets/js/services/category.service.js"></script>
-    <script src="/premium-menu/assets/js/services/product.service.js"></script>
+    <script src="/assets/js/services/api.service.js"></script>
+    <script src="/assets/js/services/restaurant.service.js"></script>
+    <script src="/assets/js/services/category.service.js"></script>
+    <script src="/assets/js/services/product.service.js"></script>
 
     <!-- Main Logic -->
-    <script src="/premium-menu/assets/js/menu.js"></script>
+    <script src="/assets/js/menu.js"></script>
 </body>
 
 </html>
