--- a/basic-menu/admin/index.html
+++ b/basic-menu/admin/index.html
@@ -14,8 +14,8 @@
         rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/premium-menu/assets/css/styles.css">
-    <link rel="stylesheet" href="/premium-menu/assets/css/admin.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/admin.css">
 </head>
 
 <body>
@@ -149,15 +149,15 @@
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
-    <script src="/premium-menu/config/supabase.js"></script>
+    <script src="/config/supabase.js"></script>
 
     <!-- Services -->
-    <script src="/premium-menu/assets/js/services/api.service.js"></script>
-    <script src="/premium-menu/assets/js/services/restaurant.service.js"></script>
-    <script src="/premium-menu/assets/js/services/category.service.js"></script>
-    <script src="/premium-menu/assets/js/services/product.service.js"></script>
+    <script src="/assets/js/services/api.service.js"></script>
+    <script src="/assets/js/services/restaurant.service.js"></script>
+    <script src="/assets/js/services/category.service.js"></script>
+    <script src="/assets/js/services/product.service.js"></script>
 
-    <script src="/premium-menu/assets/js/admin.js"></script>
+    <script src="/assets/js/admin.js"></script>
 </body>
 
 </html>
