--- a/customer/menu.html
+++ b/customer/menu.html
@@ -10,21 +10,13 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-    <!-- Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&family=Inter:wght@400;700;900&display=swap"
         rel="stylesheet">
-    <style>
-        /* Fallback for mystery DMSans request */
-        @font-face {
-            font-family: 'DM Sans';
-            src: local('Cairo'), local('sans-serif');
-        }
-    </style>
 
     <!-- Styles -->
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link rel="stylesheet" href="/assets/css/menu.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/menu.css">
 </head>
 
 <body class="antialiased">
@@ -114,16 +106,16 @@
 
     <!-- Core Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/config/supabase.js"></script>
+    <script src="../config/supabase.js"></script>
 
     <!-- Services -->
-    <script src="/assets/js/services/api.service.js"></script>
-    <script src="/assets/js/services/restaurant.service.js"></script>
-    <script src="/assets/js/services/category.service.js"></script>
-    <script src="/assets/js/services/product.service.js"></script>
+    <script src="../assets/js/services/api.service.js"></script>
+    <script src="../assets/js/services/restaurant.service.js"></script>
+    <script src="../assets/js/services/category.service.js"></script>
+    <script src="../assets/js/services/product.service.js"></script>
 
     <!-- Main Logic -->
-    <script src="/assets/js/menu.js"></script>
+    <script src="../assets/js/menu.js"></script>
 </body>
 
 </html>
