--- a/admin/login.html
+++ b/admin/login.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تسجيل الدخول - لوحة التحكم</title>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <style>
         body {
             display: flex;
@@ -112,7 +112,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="/config/supabase.js"></script>
+    <script src="../config/supabase.js"></script>
     <script>
         document.getElementById('loginForm').addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -130,7 +130,7 @@
                 if (error) throw error;
 
                 // Success - redirect to dashboard
-                window.location.href = '../';
+                window.location.href = 'index.html';
             } catch (error) {
                 errorDiv.textContent = '❌ ' + error.message;
                 errorDiv.style.display = 'block';
@@ -139,10 +139,9 @@
 
         // Check if already logged in
         (async () => {
-            console.log('Supabase Client Initialized with URL:', supabaseClient.supabaseUrl);
             const { data: { user } } = await supabaseClient.auth.getUser();
             if (user) {
-                window.location.href = '../';
+                window.location.href = 'index.html';
             }
         })();
     </script>
