--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="refresh" content="0; url=./menu/">
-    <title>Rich Cafe - Redirecting</title>
 </head>
+
 <body>
-    <p>Redirecting to <a href="./menu/">Rich Cafe Menu</a>...</p>
+    <p>Redirecting to <a href="./menu/">menu</a>...</p>
 </body>
+
 </html>
