Fix: Supabase RLS recursion, path refactoring, and missing assets

--- a/admin/index.html
+++ b/admin/index.html
@@ -25,11 +25,11 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo-section">
-                    <img src="/premium-menu/assets/images/logo.png" alt="Logo" class="logo" id="headerLogo">
+                    <img src="/assets/images/logo.png" alt="Logo" class="logo" id="headerLogo">
                     <h1 id="restaurantName">لوحة التحكم</h1>
                 </div>
                 <div class="header-actions">
-                    <a href="/premium-menu/menu/" target="_blank" class="btn btn-secondary">
+                    <a href="/menu/" target="_blank" class="btn btn-secondary">
                         عرض المنيو
                     </a>
                     <button class="btn btn-danger" id="logoutBtn">
@@ -63,7 +63,7 @@
                         <div class="form-group">
                             <label>🖼️ شعار المطعم</label>
                             <div class="image-upload">
-                                <img src="/premium-menu/assets/images/placeholder.png" alt="Logo" id="logoPreview">
+                                <img src="/assets/images/placeholder.png" alt="Logo" id="logoPreview">
                                 <input type="file" id="logoInput" accept="image/*">
                                 <button type="button" class="btn btn-primary"
                                     onclick="document.getElementById('logoInput').click()">
