--- a/admin/login/index.html
+++ b/admin/login/index.html
@@ -131,7 +131,7 @@
                 if (error) throw error;
 
                 // Success - redirect to dashboard
-                window.location.href = '../';
+                window.location.href = '/admin';
             } catch (error) {
                 errorDiv.textContent = '❌ ' + error.message;
                 errorDiv.style.display = 'block';
@@ -143,7 +143,7 @@
             console.log('Supabase Client Initialized with URL:', supabaseClient.supabaseUrl);
             const { data: { user } } = await supabaseClient.auth.getUser();
             if (user) {
-                window.location.href = '../';
+                window.location.href = '/admin';
             }
         })();
     </script>
